# OPV-FAIR

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_pipeline.py
data/raw/DC/: DegradationTemp_27.01.csv
data/raw/L1/: 2506251555386_deg-60degree_IV7_250627-133007.txt  2506251555386_deg-90degree_IV7_250627-133002.txt
src/opv_fair/: __init__.py  schema.py
src/opv_fair/converters/: fair_converter.py
src/opv_fair/parsers/: base_parser.py  dc_parser.py  l1_parser.py
